finishing /login
!! docs on /login need to be added !!
